<resources>
    <string name="app_name">QuranHub</string>
    <string name="fehris_menu">Sura and Juz\' Index</string>
    <string name="topics_menu">Topics</string>
    <string name="library_menu">Library</string>
    <string name="live_menu">Live</string>
    <string name="plan_menu">The Plan</string>
    <string name="fwasil_menu">Bookmarks</string>
    <string name="favorite_menu">Favorites</string>
    <string name="notes_menu">My Notes</string>
    <string name="tagweed_menu">Tajweed</string>
    <string name="tanbehat_menu">Errors Alerts</string>
    <string name="statistcs_menu">Statistics</string>
    <string name="settings_menu">Settings</string>
    <string name="downloads_menu">Downloads Manager</string>
    <string name="myaccount_menu">My Account</string>
    <string name="about_app_menu">About the Application</string>
    <string name="technical_support_menu">Technical Support</string>
    <string name="notes_dialog">Notes</string>
    <string name="tafseer_dialog">Explain</string>
    <string name="listen_dialog">Listen</string>
    <string name="add_fav">Add</string>
    <string name="fasil_dialog">Bookmark</string>
    <string name="share_dialog">Share</string>
    <string name="load_image_failed">Error loading the image!</string>
    <string name="page_info_failed">Error getting the page info of the Quran!</string>
    <string name="select_aya_fail">Faliure in choosing the verse</string>
    <string name="sura">Sura</string>
    <string name="fasil_note">Note</string>
    <string name="fasil_memorize">Memorize</string>
    <string name="fasil_read">Reciting</string>
    <string name="fasil_favorite">Favorite</string>
    <string name="insert_bookmark_failed">Failure in adding a bookmark to the verse</string>
    <string name="success_insert_bookmark">Bookmark saved successfullly</string>
    <string name="search">Search</string>
    <string name="bookmark_removed">Bookmark is removed</string>
    <string name="bookmark_failed_removed">Failure in erasing this bookmark, please try again</string>
    <string name="page_num">Page  %s</string>
    <string name="ayas_num">%s Verses</string>
    <string name="aya_num">Verse %s</string>
    <string name="aya_rob3">Quarter  %s</string>
    <string name="aya_hezb">Hizb  %s</string>
    <string name="aya_goz2">Juz\'  %s</string>
    <string name="download_file">is downloading…</string>
    <string name="guz2_index">Juz\' index</string>
    <string name="sura_index">Surah index</string>
    <string name="sura_index_failed">Failure in fetching index of surah!</string>
    <string name="aya">Verse</string>
    <string name="chapter">Juz\'</string>
    <string name="hizb">Hizb</string>
    <string name="rub3">Quarter</string>
    <string name="page">Page</string>
    <string name="bookmark_filter_header">Display by bookmark color</string>
    <string name="all_bookmark">All bookmarks</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="show">Display</string>
    <string name="msg_no_bookmarks">No bookmarks available!</string>
    <string name="no_internet">Check internet connection!</string>
    <string name="mushaf">The Quran</string>
    <string name="tooltip_quran_night_mode">Toggle night mode</string>
    <string name="tooltip_quran_search">Search Quran</string>
    <string name="trajim_menu">Translation</string>
    <string name="sura_makya">Makki</string>
    <string name="sura_madnya">Madani</string>
    <string name="storage_perm">This app needs access to your storage to open file.</string>
    <string-array name="agza2_name">
        <item>Juz\' one</item>
        <item>Juz\' two</item>
        <item>Juz\' three</item>
        <item>Juz\' four</item>
        <item>Juz\' five</item>
        <item>Juz\' six</item>
        <item>Juz\' seven</item>
        <item>Juz\' eight</item>
        <item>Juz\' nine</item>
        <item>Juz\' ten</item>
        <item>Juz\' eleven</item>
        <item>Juz\' twelve</item>
        <item>Juz\' thirteen</item>
        <item>Juz\' fourteen</item>
        <item>Juz\' fifteen</item>
        <item>Juz\' sixteen</item>
        <item>Juz\' seventeen</item>
        <item>Juz\' eighteen</item>
        <item>Juz\' nineteen</item>
        <item>Juz\' twenty</item>
        <item>Juz\' twenty one</item>
        <item>Juz\' twenty two</item>
        <item>Juz\' twenty three</item>
        <item>Juz\' twenty four</item>
        <item>Juz\' twenty five</item>
        <item>Juz\' twenty six</item>
        <item>Juz\' twenty seven</item>
        <item>Juz\' twenty eight</item>
        <item>Juz\' twenty nine</item>
        <item>Juz\' thirty</item>
    </string-array>
    <string-array name="sura_name">
        <item>Al-Fatihah </item>
        <item>Al-Baqarah </item>
        <item>Al \'Imran</item>
        <item>An-Nisa</item>
        <item>Al-Ma\'idah</item>
        <item>Al-An\'am</item>
        <item>Al-\'Araf</item>
        <item>Al-Anfal</item>
        <item>At-Tawbah </item>
        <item>Yunus</item>
        <item>Hud</item>
        <item>Yusuf </item>
        <item>Ar-Ra\'d</item>
        <item>Ibrahim </item>
        <item>Al-Hijr</item>
        <item>An-Nahl </item>
        <item>Al-Isra\'</item>
        <item>Al-Kahf</item>
        <item>Maryam</item>
        <item>Ta-Ha</item>
        <item>Al-Anbiya</item>
        <item>Al-Hajj</item>
        <item>Al-Mu\'minun</item>
        <item>An-Nur </item>
        <item>Al-Furqan</item>
        <item>Ash-Shu\'ara\'</item>
        <item>An-Naml</item>
        <item>Al-Qasas</item>
        <item>Al-\'Ankabut</item>
        <item>Ar-Rum</item>
        <item>Luqman</item>
        <item>As-Sajdah</item>
        <item>Al-Ahzab</item>
        <item>Saba\'</item>
        <item>Fatir</item>
        <item>Ya-Sin</item>
        <item>As-Saffat</item>
        <item>Sad</item>
        <item>Az-Zumar</item>
        <item>Ghafir </item>
        <item>Fussilat </item>
        <item>Ash-Shura</item>
        <item>Az-Zukhruf </item>
        <item>Ad-Dukhan </item>
        <item>Al-Jathiyah</item>
        <item>Al-Ahqaf </item>
        <item>Muhammad</item>
        <item>Al-Fath </item>
        <item>Al-Hujurat</item>
        <item>Qaf</item>
        <item>Adh-Dhariyat </item>
        <item>At-Tur </item>
        <item>An-Najm</item>
        <item>Al-Qamar </item>
        <item>Ar-Rahman</item>
        <item>Al-Waqi\'ah</item>
        <item>Al-Hadid</item>
        <item>Al-Mujadilah </item>
        <item>Al-Hashr </item>
        <item>Al-Mumtahanah </item>
        <item>As-Saff </item>
        <item>Al-Jumu\'ah </item>
        <item>Al-Munafiqun </item>
        <item>At-Taghabun</item>
        <item>At-Talaq</item>
        <item>At-Tahrim</item>
        <item>Al-Mulk </item>
        <item>Al-Qalam </item>
        <item>Al-Haqqah </item>
        <item>Al-Ma\'arij </item>
        <item>Nuh</item>
        <item>Al-Jinn</item>
        <item>Al-Muzzammil </item>
        <item>AL-Muddaththir </item>
        <item>Al-Qiyamah </item>
        <item>Al-Insan</item>
        <item>Al-Mursalat </item>
        <item>An-Naba\'</item>
        <item>An-Nazi\'at </item>
        <item>Abasa</item>
        <item>At-Takwir </item>
        <item>Al-Infitar </item>
        <item>Al-Mutaffifin </item>
        <item>Al-Inshiqaq</item>
        <item>Al-Buruj </item>
        <item>At-Tariq</item>
        <item>Al-A\'la </item>
        <item>Al-Ghashiyah </item>
        <item>Al-Fajr </item>
        <item>Al-Balad </item>
        <item>Ash-Shams</item>
        <item>Al-Layl </item>
        <item>Ad-Duha</item>
        <item>Al-Sharh </item>
        <item>At-Tin</item>
        <item>Al-\'Alaq</item>
        <item>Al-Qadr </item>
        <item>Al-Bayyinah </item>
        <item>Al-Zalzalah</item>
        <item>Al-\'Adiyat</item>
        <item>Al-Qari\'ah </item>
        <item>Al-Takathur </item>
        <item>Al-\'Asr </item>
        <item>Al-Humazah </item>
        <item>Al-Fil</item>
        <item>Quraysh </item>
        <item>Al-Ma\'un</item>
        <item>Al-Kawthar</item>
        <item>Al-Kafirun </item>
        <item>An-Nasr</item>
        <item>Al-Masad</item>
        <item>Al-Ikhlas</item>
        <item>Al-Falaq</item>
        <item>An-Nas</item>
    </string-array>
    <string-array name="hezb_name">
        <item>First hezb</item>
        <item>Second hezb</item>
    </string-array>
    <string-array name="quarter_name">
        <item>First quarter</item>
        <item>Second quarter</item>
        <item>Third quarter</item>
        <item>Fourth quarter</item>
    </string-array>
    <string name="settings_category_language">Language</string>
    <string name="settings_category_recitation">Recitation settings</string>
    <string name="settings_category_sound">Sound settings</string>
    <string name="settings_category_aboutapp">About the application</string>
    <string name="setting_quran_recitation">Quran recitation</string>
    <string name="setting_app_lang">Application language</string>
    <string name="setting_screen_reading_backlight">Enable screen backlight during reading Quran</string>
    <string name="setting_last_read_page">Automatically open last read page</string>
    <string name="setting_reading_warnings">Reading warnings</string>
    <string name="setting_reading_alarm">Alarm time</string>
    <string name="setting_quran_reader">Automatic Quran reader</string>
    <string name="setting_audio_download_manager">Audio download manager</string>
    <string name="setting_help">Help</string>
    <string name="setting_about_app_version">About app version</string>
    <string name="setting_share_app">Share the app</string>
    <string name="open_file">Open file in</string>
    <string name="in_this_app">In this app</string>
    <string name="out_this_app">In external PDF viewer</string>
    <string name="hafs_recitation">Hafs from Asim</string>
    <string name="setting_quran_translation_lang">Quran translation language</string>
    <string name="title_dialog_quran_reciter">Choose Quran reciter</string>
    <string name="msg_downloaded_reciters_only">Displaying only previously downloaded reciters</string>
    <string name="msg_internet_connection_failed">Internet connection failed</string>
    <string name="select">Select</string>
    <string name="title_dialog_audio_download_amount">Quran audio download</string>
    <string name="delete">Delete</string>
</resources>