<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/corner_white_dialog">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="@dimen/filter_dialog_width"
        android:layout_height="@dimen/bookmark_item_body_height"
        android:background="@drawable/top_corner_bg"
        android:fontFamily="@font/custom_bold_font"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/margin_16"
        android:text="@string/open_file"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/in_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:gravity="center_horizontal"
        android:text="@string/in_this_app"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <View
        android:id="@+id/seperator1"
        android:layout_width="@dimen/filter_dialog_width"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/in_app" />

    <TextView
        android:id="@+id/out_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:gravity="center_horizontal"
        android:text="@string/out_this_app"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/seperator1" />
</androidx.constraintlayout.widget.ConstraintLayout>