<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/corner_primary_dialog"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/share_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_6"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/icon_dialog_size"
            android:layout_height="@dimen/icon_dialog_size"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/share_ayha_action_white_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:gravity="center_horizontal"
            android:text="@string/share_dialog"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fasel_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_6"
        android:orientation="vertical"

        >

        <ImageView
            android:id="@+id/bookmark_iv"
            android:layout_width="@dimen/icon_dialog_size"
            android:layout_height="@dimen/icon_dialog_size"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bookmark_ayha_action_white_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:gravity="center_horizontal"
            android:text="@string/fasil_dialog"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listen_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_6"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/icon_dialog_size"
            android:layout_height="@dimen/icon_dialog_size"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/play_ayha_action_white_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:gravity="center_horizontal"
            android:text="@string/listen_dialog"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_10" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/tafseer_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_6"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/icon_dialog_size"
            android:layout_height="@dimen/icon_dialog_size"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/explain_tafseer_ayha_action_white_ic"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:gravity="center_horizontal"
            android:text="@string/tafseer_dialog"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notes_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_6"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/note_iv"
            android:layout_width="@dimen/icon_dialog_size"
            android:layout_height="@dimen/icon_dialog_size"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/add_note_ayha_action_white_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:gravity="center_horizontal"
            android:text="@string/notes_dialog"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_10" />
    </LinearLayout>


</LinearLayout>